Development version
===================
- Fix: Anchors in generated URLs are quoted using urlib.quote, instead of
  urlib.quote_plus.


Version 0.5.1 - August 17, 2010
===============================
- When a URL matches, some attributes are set in the request object:
  - request.route: the matched route
  - request.route_args: the matched positional arguments, a tuple
  - request.route_kwargs: the matched keyword arguments, a dict

- WSGIApplication.handle_exception() doesn't automatically raises the exception
  when in debug mode: it is up to the error handler to raise it if in dev; it
  will be raised if no error handler is defined to handle it anyway.

- Added attributes, WSGIApplication.registry, Request.registry and
  Request.context, dictionaries for objects in use during the app or request
  lifetimes.

- Before passing the request method to the RequestHandler, '-' is replaced
  by '_', so that a method like WebDav's 'VERSION-CONTROL' can be supported.

- Config.get() now only returns the passed default value when key is defined.
  This is the intended, more predictable behavior: default is a default for
  the key, not the module. For example::

      # If config['foo']['bar'] is not set, return 'baz'.
      config.get('foo', 'bar', default='baz')

      # If config['foo'] is not set, return None. Default is ignored here.
      config.get('foo', default='baz')

- Router initialization now receives the app as parameter, so that extended
  routes can access app's config.


Version 0.5 - August 13, 2010
=============================
- Better compatibility with webapp:
  - webapp2.WSGIapplication can be used with webapp.RequestHandler.
  - webapp.WSGIapplication can be used with webapp2.RequestHandler.

  Although the functionality becomes limited in both cases, this should help
  migration.

- Review of Response based on observations from
  http://pythonpaste.org/webob/differences.html#webapp-response:
